cmake_minimum_required(VERSION 3.10)
project(Engine3D VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(SOURCES Engine3D.cpp main.cpp)

find_library(X11_LIB X11)
find_library(GL_LIB GL)
find_library(XRANDR_LIB Xrandr)
find_library(XXF86VM_LIB Xxf86vm)
find_library(XCURSOR_LIB Xcursor)
find_library(XINERAMA_LIB Xinerama)

set(RAYLIB_SYSTEM_LIBS m pthread ${CMAKE_DL_LIBS} rt)
if(X11_LIB)
  list(APPEND RAYLIB_SYSTEM_LIBS ${X11_LIB})
endif()
if(GL_LIB)
  list(APPEND RAYLIB_SYSTEM_LIBS ${GL_LIB})
endif()
if(XRANDR_LIB)
  list(APPEND RAYLIB_SYSTEM_LIBS ${XRANDR_LIB})
endif()
if(XXF86VM_LIB)
  list(APPEND RAYLIB_SYSTEM_LIBS ${XXF86VM_LIB})
endif()
if(XCURSOR_LIB)
  list(APPEND RAYLIB_SYSTEM_LIBS ${XCURSOR_LIB})
endif()
if(XINERAMA_LIB)
  list(APPEND RAYLIB_SYSTEM_LIBS ${XINERAMA_LIB})
endif()

find_package(raylib CONFIG)
if(raylib_FOUND)
  add_executable(raylib_test ${SOURCES})
  target_link_libraries(raylib_test PRIVATE raylib::raylib)
else()
  if(EXISTS "$ENV{HOME}/raylib/src/raylib.h" AND (EXISTS "$ENV{HOME}/raylib/src/libraylib.a" OR EXISTS "$ENV{HOME}/raylib/src/libraylib.so"))
    add_executable(raylib_test ${SOURCES})
    target_include_directories(raylib_test PRIVATE "$ENV{HOME}/raylib/src")
    if(EXISTS "$ENV{HOME}/raylib/src/libraylib.a")
      target_link_libraries(raylib_test PRIVATE "$ENV{HOME}/raylib/src/libraylib.a" ${RAYLIB_SYSTEM_LIBS})
    else()
      target_link_libraries(raylib_test PRIVATE "$ENV{HOME}/raylib/src/libraylib.so" ${RAYLIB_SYSTEM_LIBS})
      set_target_properties(raylib_test PROPERTIES INSTALL_RPATH "$ENV{HOME}/raylib/src")
    endif()
  elseif(EXISTS "/usr/local/include/raylib.h" AND (EXISTS "/usr/local/lib/libraylib.a" OR EXISTS "/usr/local/lib/libraylib.so"))
    add_executable(raylib_test ${SOURCES})
    target_include_directories(raylib_test PRIVATE /usr/local/include)
    if(EXISTS "/usr/local/lib/libraylib.a")
      target_link_libraries(raylib_test PRIVATE /usr/local/lib/libraylib.a ${RAYLIB_SYSTEM_LIBS})
    else()
      target_link_libraries(raylib_test PRIVATE /usr/local/lib/libraylib.so ${RAYLIB_SYSTEM_LIBS})
      set_target_properties(raylib_test PROPERTIES INSTALL_RPATH "/usr/local/lib")
    endif()
  else()
    message(FATAL_ERROR "raylib not found. Install raylib or place it in $HOME/raylib/src or /usr/local.")
  endif()
endif()
